--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commander": "^2.18.0",
     "exif": "^0.6.0",
     "exiftool": "0.0.3",
+    "filesize": "^4.1.2",
     "fs-extra": "^7.0.0",
     "imagemagick": "^0.1.3",
     "inquirer": "^6.2.0",
