--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "filesize": "^4.1.2",
     "fs-extra": "^7.0.0",
     "imagemagick": "^0.1.3",
+    "imagemin-mozjpeg": "^8.0.0",
     "inquirer": "^6.2.0",
     "inquirer-select-line": "^1.1.1",
     "lodash": "^4.17.11",
@@ -29,5 +30,8 @@
     "readline-sync": "^1.4.9",
     "sanitize-filename": "^1.6.1",
     "terminal-link": "^1.1.0"
+  },
+  "devDependencies": {
+    "imagemin-keep-folder": "^5.3.2"
   }
 }
