--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.16.4",
     "filesize": "^4.1.2",
     "fs-extra": "^7.0.0",
+    "html-escaper": "^1.0.1",
     "imagemagick": "^0.1.3",
+    "imagemin-keep-folder": "^5.3.2",
     "imagemin-mozjpeg": "^8.0.0",
     "inquirer": "^6.2.0",
     "inquirer-select-line": "^1.1.1",
@@ -31,7 +33,7 @@
     "read-chunk": "^3.0.0",
     "readline-sync": "^1.4.9",
     "sanitize-filename": "^1.6.1",
-    "terminal-link": "^1.1.0",
-    "imagemin-keep-folder": "^5.3.2"
+    "scp": "0.0.3",
+    "terminal-link": "^1.1.0"
   }
 }
