--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "read-chunk": "^3.0.0",
     "readline-sync": "^1.4.9",
     "sanitize-filename": "^1.6.1",
-    "terminal-link": "^1.1.0"
+    "terminal-link": "^1.1.0",
+    "update-notifier": "^2.5.0"
   }
 }
