--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "filesize": "^4.1.2",
     "fs-extra": "^7.0.0",
     "html-escaper": "^1.0.1",
+    "image-size": "^0.7.4",
     "imagemagick": "^0.1.3",
     "imagemin-keep-folder": "^5.3.2",
     "imagemin-mozjpeg": "^8.0.0",
