--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pano-tools": "index.js"
   },
   "dependencies": {
-    "chokidar": "^2.0.4",
+    "chokidar": "^3.4.2",
     "cli-progress": "^2.1.0",
     "cli-spinner": "^0.2.8",
     "colors": "^1.3.2",
@@ -19,10 +19,11 @@
     "exiftool": "0.0.3",
     "express": "^4.16.4",
     "filesize": "^4.1.2",
-    "fs-extra": "^7.0.0",
+    "fs-extra": "^9.0.1",
     "html-escaper": "^1.0.1",
     "image-size": "^0.7.4",
     "imagemagick": "^0.1.3",
+    "imagemin": "^7.0.1",
     "imagemin-keep-folder": "^5.3.2",
     "imagemin-mozjpeg": "^8.0.0",
     "inquirer": "^6.2.0",
