--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pano-tools": "index.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chokidar": "^3.4.2",
     "cli-progress": "^2.1.0",
     "cli-spinner": "^0.2.8",
