--- a/config.json
+++ b/config.json
@@ -18,6 +18,11 @@
       "bracketing": 3,
       "nadirFill": 32
     },
+    "canon-5d-mark-IV_sigma8": {
+      "directions": 4,
+      "bracketing": 3,
+      "nadirFill": 28
+    },
     "sigma8": {
       "directions": 4,
       "bracketing": 3,
