--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "cli-spinner": "^0.2.8",
     "colors": "^1.3.2",
     "commander": "^2.18.0",
+    "cors": "^2.8.5",
     "docker": "^1.0.0",
     "ecef-projector": "^1.0.1",
     "exif": "^0.6.0",
     "exiftool": "0.0.3",
     "express": "^4.16.4",
+    "express-fileupload": "^1.2.1",
     "extractd": "^1.1.9",
     "filesize": "^4.1.2",
     "fs-extra": "^9.0.1",
@@ -37,6 +39,7 @@
     "inquirer-select-line": "^1.1.1",
     "jsdom": "^16.4.0",
     "lodash": "^4.17.11",
+    "mime": "^2.5.0",
     "mkdirp": "^0.5.1",
     "node-exiftool": "^2.3.0",
     "node-notifier": "^9.0.0",
