--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "colors": "^1.3.2",
     "commander": "^2.18.0",
     "cors": "^2.8.5",
+    "diff": "^5.0.0",
     "docker": "^1.0.0",
     "ecef-projector": "^1.0.1",
     "exif": "^0.6.0",
