--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "terminal-link": "^1.1.0",
     "update-notifier": "^2.5.0",
     "vorpal": "^1.12.0",
+    "xml-parse": "^0.4.0",
     "yargs": "^16.2.0"
   }
 }
